Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-apps
  namespace: golang
spec:
  selector:
    matchLabels:
      app: golang-app
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: golang-app
    spec:
      containers:
      - name: static
        image: 062696085241.dkr.ecr.ap-south-1.amazonaws.com/demo:latest
        ports:
        - containerPort: 3000
