service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-svc
  namespace: golang
spec:
  selector:
    app: golang-app
  ports:
  - port: 80
    targetPort: 3000
