ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: go-ingress
 namespace: golang
spec:
 rules:
 - host: golang.bharathidevops.xyz
   http:
     paths:
     - path:
       backend:
         serviceName:  go-svc
         servicePort: 80
